--- a/styles/global.css
+++ b/styles/global.css
@@ -6,3 +6,10 @@
 body {
   font-family: 'Noto Sans Tamil', serif;
 }
+
+.kural-highlight {
+  text-shadow:
+    1px 1px 2px #facc15,   /* yellow-400 */
+    2px 2px 4px #fbbf24,   /* yellow-500 */
+    3px 3px 6px #f59e0b;   /* amber-500 */
+}
